# HY-454_Project_Flappy-Bird

./: CMakeLists.txt  README.md  main.cpp
cmake_modules/: FindSDL2.cmake  FindSDL2TTF.cmake  FindSDL2_Mixer.cmake
sources/: GameDelegate.cpp  GameDelegate.h
sources/Screens/GameScreen/: BarrierContainer.cpp  BarrierContainer.h  BirdSprite.cpp  BirdSprite.h  GameScreen.cpp  GameScreen.h
sources/Screens/GameScreen/Barriers/: BarrierInterface.h  PipeBarrierSprite.cpp  PipeBarrierSprite.h
sources/Screens/PauseScreen/: PauseScreen.cpp  PauseScreen.h
sources/Screens/ResultScreen/: ResultScreen.cpp  ResultScreen.h
sources/Screens/StartScreen/: StartScreen.cpp  StartScreen.h
sources/core/: AbstractScreen.cpp  AbstractScreen.h  AnimatorManager.h  Color.h  Event.h  GameSettings.cpp  GameSettings.h  Geometry.h  ScreenStack.cpp  ScreenStack.h  SoundManager.cpp  SoundManager.h  Timer.cpp  Timer.h  UserGameData.cpp  UserGameData.h
sources/core/Animation/: Animation.h  FrameRangeAnimation.h  GravityAnimation.h  MovingAnimation.h  RotationAnimation.h
sources/core/Animator/: Animator.cpp  Animator.h  FrameRangeAnimator.cpp  FrameRangeAnimator.h  GravityAnimator.cpp  GravityAnimator.h  GroupMovingAnimator.cpp  GroupMovingAnimator.h  MovingAnimator.cpp  MovingAnimator.h  RotationAnimator.cpp  RotationAnimator.h
sources/core/GameEngineAbstract/: BitmapInterface.h  GameEngineInterface.h  GraphicsSystemInterface.h  SoundSystemInterface.h
sources/core/SDLBackend/: SDLBitmap.cpp  SDLBitmap.h  SDLEngine.cpp  SDLEngine.h  SDLRenderer.cpp  SDLRenderer.h  SDLSoundSystem.cpp  SDLSoundSystem.h  SDLTextBitmap.cpp  SDLTextBitmap.h
sources/core/Sprites/: ImageSprite.cpp  ImageSprite.h  InfiniteBackgroundSprite.cpp  InfiniteBackgroundSprite.h  Layer.cpp  Layer.h  Sprite.cpp  Sprite.h  TextSprite.cpp  TextSprite.h
third-part/json/: json.hpp
